<resources>
    <string name="app_name">Leitour</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="min_placeholder">100k</string>
    <string name="short_placeholder">holder</string>
    <string name="long_placeholder">I AM A VERY LONG PLACE HOLDER FRIEND</string>
    <string name="likes">Likes</string>
    <string name="add_like">Curtir</string>
    <string name="userName">Nome do usuário</string>
    <string name="userEmail">Email do usuário</string>
    <string name="userPassword">Senha do usuário</string>
    <string name="publicationMessage">Message</string>
    <string name="publicationShare">Compartilhar</string>
    <string name="seja_bem_vindo">Seja Bem-vindo</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="lembrar_senha">Continuar Logado</string>
    <string name="sem_conta">Não possui conta? Registre-se</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repita a senha</string>
    <string name="author">Autor(a): </string>
    <string name="book_author">Autor(a): </string>
    <string name="book_title">Título: </string>
    <string name="book_description">Descrição: </string>
    <string name="string_post_delete_dialog_title" type="id">O post será deletado</string>
    <string name="string_post_delete_dialog_message" type="id">Deseja mesmo deletar seu post?</string>
    <string name="book_publisher">Editora: </string>
    <string name="book_published_date">Lançamento: </string>
    <string name="book_pages">Páginas: </string>
    <string name="book_isbn10">ISBN 10: </string>
    <string name="book_isbn13">ISBN 13: </string>
    <string name="book_category">Categoria: </string>
    <string name="book_language">Idioma: </string>
    <string name="frase_author">Frase: </string>
    <string name="pesquisar">Pesquisar</string>
    <string name="posts">Posts</string>
    <string name="seguidores">"Seguidores "</string>
    <string name="seguindo">"Seguindo "</string>
    <string name="string_photo_success">Foto atualizada.</string>
    <string name="string_photo_fail">Erro ao atualizar foto. Tente novamente.</string>
    <string name="string_connection">Verifique a conexão.</string>
    <string name="string_comment_created">O comentário foi criado.</string>
    <string name="string_welcome">Seja bem-vindo(a): </string>
    <string name="string_write_more">Escreva um pouco mais</string>
    <string name="string_post_delete_error">Não foi possível deletar o post.</string>
    <string name="string_post_delete_success">Post deletado com sucesso.</string>
    <string name="string_comment_edit_dialog_title">Deseja editar seu comentário?</string>
    <string name="string_comment_update_success">Comentário atualizado.</string>
    <string name="string_annotation_update_success">A anotação foi atualizada.</string>
    <string name="string_annotation_delete_success">A anotação foi deletada.</string>
    <string name="string_annotation_update_error">Não foi possível atualizar a anotação.</string>
    <string name="string_annotation_delete_error">Não foi possível deletar a anotação.</string>
    <string name="string_dialog_option_cancel">Cancelar</string>
    <string name="string_dialog_option_send">Enviar</string>
    <string name="string_dialog_option_Confirm">Confirmar</string>
    <string name="string_comment_update_error">Não foi possível atualizar o comentário.</string>
    <string name="string_comment_dialog_title">O comentário será apagado</string>
    <string name="string_comment_dialog_message">Deseja mesmo apagar seu comentário?</string>
    <string name="string_comment_delete_success">O comentário foi deletado.</string>
    <string name="string_comment_delete_error">Não foi possível deletar o comentário, tente novamente.</string>
    <string name="string_annotation_dialog_title">A anotação será deletada.</string>
    <string name="string_annotation_dialog_message">Deseja mesmo apagar sua anotação?</string>
    <string name="string_annotation_create_success">Anotação criada com sucesso.</string>
    <string name="string_annotation_create_error">Erro ao criar a anotação, tente novamente.</string>
    <string name="string_edit">Editar</string>
    <string name="string_exit">Sair</string>
    <string name="string_unsave">Des-salvar</string>
    <string name="string_delete">Deletar</string>
    <string name="string_write_post">Envie seu post</string>
    <string name="string_write_comment">Escreva um comentário</string>
    <string name="string_welcome_alt">Seja Bem-Vindo(a)</string>
    <string name="string_remember">Lembrar-se</string>
    <string name="string_already_has_account">Já possui uma conta? Entrar</string>
    <string name="string_register">Registrar</string>
    <string name="string_dont_has_account">Não possui conta? Registre-se</string>
    <string name="string_profile">Perfil</string>
    <string name="string_post">Postar</string>
    <string name="string_home">Home</string>
    <string name="string_search">Pesquisar</string>
    <string name="string_favorites">Favoritos</string>
    <string name="string_book_info">Informações do Livro</string>
    <string name="string_save">Salvar</string>
    <string name="string_annote">Anotar</string>
    <string name="logout_diaog_message">Deseja mesmo sair?</string>
    <string name="logout_dialog_title">Efetuando Logout</string>
    <string name="string_create_anotation">Escrever anotação</string>
    <string name="string_saved_book_title">LISTA DE FAVORITOS</string>
    <string name="string_annotation_dialog_Update_title">Altere sua anotação</string>
    <string name="string_book_saved_sucess">Livro salvo com sucesso.</string>


</resources>