<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_return"
            style="@style/CircularButton"
            android:background="@color/white"
            android:src="@drawable/icon_left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_book_info" />

        <ImageButton
            android:id="@+id/saved_options"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:src="@drawable/icon_options"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_book_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/placeholder" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:id="@+id/info_book_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#a5a5a5"
                        android:textSize="10sp"
                        app:icon="@drawable/icon_category" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:id="@+id/info_book_pages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#a5a5a5"
                        android:textSize="10sp"
                        app:icon="@drawable/icon_pages" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:id="@+id/info_book_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#a5a5a5"
                        android:textSize="10sp"
                        app:icon="@drawable/icon_earth" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:id="@+id/info_book_isbn13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#a5a5a5"
                        android:textSize="10sp"
                        android:visibility="gone"
                        app:icon="@drawable/icon_heart" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/FlexRow">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/icon_annotation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_write"
                    android:text="@string/string_annote"
                    android:visibility="invisible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/icon_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_save"
                    android:icon="@drawable/icon_saved_flag" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">
            <TextView
                android:id="@+id/txt_book_author"
                style="@style/TextTitle"
                android:text="@string/book_author" />

            <TextView
                android:id="@+id/txt_book_title"
                style="@style/TextTitle"
                android:text="@string/book_title" />

            <TextView
                android:id="@+id/txt_book_publisher"
                style="@style/TextTitle"
                android:text="@string/book_publisher" />

            <TextView
                android:id="@+id/txt_published_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_published_date" />




                <TextView
                    android:id="@+id/txt_book_isbn10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_isbn10" />

                <TextView
                    android:id="@+id/txt_book_isbn13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_isbn13" />

            <TextView
                android:id="@+id/txt_book_description"
                style="@style/TextTitle"
                android:text="@string/book_description" />
        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_annotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>