<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    tools:context=".view.fragment.LoginFragment"
    tools:visibility="visible">

    <TextView
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="228dp"
        android:gravity="top"
        android:text="@string/seja_bem_vindo"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="282dp"
        android:textColor="@color/white"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:cornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="254dp"
        android:layout_toEndOf="@+id/cbKeepLogged"
        android:gravity="top"
        android:text="@string/esqueceu_senha"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/cbKeepLogged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="235dp"
        android:button="@drawable/img_checkbox"
        android:text="@string/lembrar_senha"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:buttonIconTint="#145CEC" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="282dp"
        android:text="@string/password"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="567dp"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textColor="@color/AzulDefault"
        android:textSize="16dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/link_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="513dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="199dp"
        android:text="@string/sem_conta"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="-16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="471dp"
        android:scaleX="2"
        app:srcCompat="@drawable/top_line_vector" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="429dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="-42dp"
        android:layout_marginBottom="2dp"
        android:scaleX="2"
        android:scaleY="1"
        app:srcCompat="@drawable/bottom_line_vector" />
</RelativeLayout>