<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:id="@+id/saved_book_layout"
    android:layout_height="200dp"
    android:layout_margin="20dp"
    android:background="@drawable/saved_book_gradient"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/item_book_title_letter"
        android:gravity="center"
        android:width="50dp"
        android:text="0"
        android:inputType="textCapCharacters"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:gravity="center"

        android:orientation="vertical">

        <TextView
            android:textAlignment="center"
            android:id="@+id/item_book_title"
            android:layout_width="match_parent"
            android:fontFamily="@font/outfit_semibold"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/book_title"
            android:textSize="20sp"
            android:textColor="#4D4D4E"/>

        <TextView
            android:id="@+id/item_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:paddingLeft="10dp"
            android:fontFamily="@font/outfit_medium"
            android:paddingRight="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/book_author"
            android:textSize="12sp"
            android:textColor="#979292"
            />

        <TextView
            android:id="@+id/frase_author"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:fontFamily="@font/outfit_medium"
            android:paddingRight="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/frase_author"
            android:textSize="12sp"
            android:visibility="gone"
            android:textColor="#979292"
            />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:maxLength="50"
            android:textSize="14sp"
            android:textColor="#9C9B9B"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_book_cover"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/placeholder"
            />

    </LinearLayout>


</LinearLayout>